# mlops2025_homework

lesson1/seminar/: basic_train.py
lesson1/seminar/notebooks/: test_mlflow_model.ipynb
lesson1/seminar/src/app/: train.py
lesson1/seminar/tests/: test_sanity.py
lesson2/: .gitignore
lesson2/seminar/step4_5_validation_fail_demo/src/: get_data.py
lesson2/seminar/step4_ge_validation_data/src/: evaluate.py
lesson2/seminar/step5_homework_model_validation_and_metrics/: .pre-commit-config.yaml  params.yaml  pyproject.toml
lesson2/seminar/step5_homework_model_validation_and_metrics/reports/validation/: index.html
lesson2/seminar/step5_homework_model_validation_and_metrics/src/: evaluate.py  validate_model.py
lesson2/seminar/step_bonus_s3_storage/: create_bucket.py
lesson3/seminar/step1_dvc_mlflow_pipeline/src/: evaluate.py  get_data.py  merge_data.py  prepare_batch.py  preprocess.py  train.py
lesson3/seminar/step2_prefect_orchestration/flows/: training_flow.py
lesson3/seminar/step2_prefect_orchestration/src/: data_tasks.py  model_tasks.py
lesson3/seminar/step3_prefect_cron/deployments/: setup_deployment.py
lesson3/seminar/step3_prefect_cron/flows/: automated_training_flow.py
lesson3/seminar/step3_prefect_cron/src/: batch_manager.py
lesson4/seminar/step1_onnx_model/: main.py  test_real_image.py
lesson4/seminar/step1_onnx_model/src/: model_converter.py  (+1 more)
lesson4/seminar/step2_fastapi_inference/: client_test.py  test_onnx_api.py
lesson4/seminar/step3_batch_optimization/: main.py
lesson4/seminar/step4_monitoring/: main.py  pyproject.toml
(+27 files in other folders)
